--- a/templates/report.html
+++ b/templates/report.html
@@ -4,5 +4,6 @@
 <body>
 <h1>Sync report</h1>
 <h3>{title}</h3>
-<p>{number_of_files}  files synced</p>
+<p>{number_of_files}
+    files synced</p>
 
